# shortcuts-agentic

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: audit.py  auth.py  block_registry.py  budget.py  composer.py  config.py  db.py  graph.py  inference.py  logging_config.py  main.py  notify.py  ratelimit.py  relay.py  safety.py  shortcut_gen.py  summarize.py  swarm.py  teammate.py  tools.py
blocks/: __init__.py  _meta.py  ai.py  data.py  device.py  flow.py  input.py  integration.py  output.py  schema.py
docs/: cherri-shortcut-guide.md  cherri-viability.md  clawbot-research.md  datajar-schema.md  ios-setup-guide.md  kanban-board.md  tech-proposal.md  tech-timeline.md
relay/: index.ts  package.json
shortcuts/: action-button.cherri  agent-dashboard.cherri  agent-result.cherri  budget-check.cherri  conversation-history.cherri  daily-digest.cherri  datajar-agent.cherri  docker-status.cherri  docker-toggle.cherri  focus-sleep.cherri  focus-work.cherri  generate-shortcut.cherri  multi-phase.cherri  nfc-trigger.cherri  quick-ask.cherri  relay-events.cherri  spawn-agent.cherri  squad-sessions.cherri  status-check.cherri  swarm-summary.cherri
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_budget.py  test_graph.py  test_ratelimit.py  test_relay.py  test_safety.py  test_shortcut_gen.py  test_tools.py
